Play button shifted around based on which table was bigger. Cheap fix -> made the play button bigger then the tables. Doesn't fix it on all computers though.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,7 +54,7 @@ textarea {
   background-color: black;
 }
 
-/* Market Item Summaries */
+/* New Game Page */
 .hiddenRow {
     padding: 0 !important;
 }
@@ -76,4 +76,9 @@ textarea {
 #team_2_display_table {
   float: right;
   width: 50%;
+}
+
+#play {
+  padding-left: 400px;
+  padding-right: 400px;
 }
